--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Mac Lobdell IO
-description: Contact Mac
+title: Mac Lobdell, BSEE, MBA
+description: IoT embedded software & services specialist
