update title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Connect with Mac
-description: IoT embedded software & services specialist
+title: maclobdell.io
+description: IoT software & services specialist
