--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: maclobdell.io
-description: IoT software & services specialist
+description: IoT Solution Architect
