--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: maclobdell.io
-description: IoT Solution Architect
+description: Electrical and Software Engineering
